<resources>
    <!--<string name="app_name">ionhaccp</string>-->
    <string name="username_hints">Username</string>
    <string name="password_hints">Password</string>
    <string name="loginbtn_hints">Login</string>
    <string name="internet_connection_msg">Check your internet connection.</string>
    <string name="Enter_mobile_number">Enter your registered Mobile Number</string>
    <string name="send_message">Send Message</string>

    <string name="digit_mobilenumber">10 digit Mobile Number</string>
    <string name="err_msg_username">Enter your username </string>
    <string name="err_msg_email">Enter your Email id</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_valid_emailid_password">Please enter valid Email id and Password</string>
    <string name="enter_your_emailid">Enter your registered Email-ID</string>
    <string name="send">Send</string>

    <string name="forgot_pass_error">Please enter correct Email id.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="str_username"></string>
    <string name="str_password"></string>


    <!--Settings Screen-->
    <string name="change_language">Select Language</string>
    <string name="change_password">Change Password</string>
    <string name="push_notification">Push Notification</string>
    <string name="icelsius_status">iCelsicus:</string>

    <!-- TODO: Remove or change this placeholder text -->
   <!-- <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="conform_pass">Confirm Password</string>
    <string name="cancle">Cancel</string>
    <string name="update">Update</string>

    <string name="password_updated">Password Updated</string>
    <string name="wrong_password">Old Password is incorrect</string>
    <string name="passwords_do_not_match">new password and confirm password do not match</string>
    <string name="valid_passwords">Enter valid passwords</string>

    <string name="dashbord">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help">Help</string>
    <string name="signout">Sign Out</string>
    <!--Language Screen-->
    <string-array name="languages">
        <item>English</item>
        <item>Español</item>
        <item>Franch</item>
        <item>हिंदी</item>
    </string-array>
    <string-array name="languages_code">
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>hi</item>
    </string-array>
    <string-array name="wifi_arrays">
        <item>None</item>
        <item>WPA Personal</item>
    </string-array>

    <string name="default_language_code">en</string>
    <string name="press_bach_exit">Press back again to Exit</string>

    <string name="icelsius_mode">Mode</string>
    <string name="change">Change</string>

    <string name="select_one_sensor">Select One Sensor:</string>
    <string name="no_sensors_found">No iCelsius sensors found</string>
    <string name="selsect_ssid">Select SSID:</string>
</resources>
