<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/dashbord" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_term_conditions"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/terms_conditions" />


        <item
            android:id="@+id/nav_private_policy"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/signout" />
    </group>



</menu>
