<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ionhaccp.activities.LoginScreenActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:paddingLeft="150dp"
            android:paddingRight="150dp"
            android:paddingTop="120dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hints"
                    android:text="@string/str_username"
                    android:singleLine="true"

                    android:textSize="@dimen/textsize" />
            </android.support.design.widget.TextInputLayout>

            <!-- <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <EditText
                     android:id="@+id/emailid"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
                     android:hint="@string/password_hints" />
             </android.support.design.widget.TextInputLayout>-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hints"
                    android:inputType="textPassword"
                    android:text="@string/str_password"
                    android:textSize="@dimen/textsize" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="200dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/loginbtn_hints"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize" />

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="1">


                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.7"
                    android:text="Forgot password?"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize" />

                <TextView
                    android:id="@+id/sinup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.3"
                    android:text="Sign In"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize" />

            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:weightSum="1">


                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize" />

                <TextView
                    android:id="@+id/sinup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_in"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
